# LeibNetz

./: .flake8  .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/: copilot-instructions.md
.github/_workflows/: black.yaml  mypy.yaml
.github/instructions/: nets.instructions.md  nodes.instructions.md
.github/workflows/: ci-cd.yml  tests.yaml
.pre-commit-hooks/: update-version.py
examples/: train_scalenet.py
leibnetz/nets/: unet.py
leibnetz/nodes/: conv_resample_node.py  node_ops.py  resample_ops.py
paper/: AGENT.md  EXTENDED_OUTLINE.md  OUTLINE.md
paper/experiments/: common.py  setup.py  train_scalenet.py  train_unet128nm.py  train_unet32nm.py  train_unet8nm.py
src/architectures/tf/: __init__.py  scale_net.py
src/leibnetz/: __init__.py  leibnet.py  local_learning.py  model_wrapper.py
src/leibnetz/nets/: __init__.py  attentive_scalenet.py  bio.py  local_learning.py  scalenet.py  unet.py
src/leibnetz/nodes/: __init__.py  additive_attention_gate_node.py  conv_pass_node.py  conv_resample_node.py  factor_compressed_conv_node.py  kan.py  node.py  node_ops.py  resample_node.py  resample_ops.py  wrapper_node.py
src/leibnetz/tests/: benchmark.py  conv_pass_node_test.py  leibnet_test.py
src/leibnetz/ui/: README.md  __init__.py  network_builder.html  network_builder.js  server.py
src/tf/: __init__.py  ops3d.py  scale_net.py
src/torch/: __init__.py
tests/: additive_attention_gate_node_test.py  benchmark.py  conftest.py  conv_pass_node_test.py  conv_resample_node_test.py  leibnet_test.py  resample_node_test.py  test_leibnet_extended.py  test_local_learning.py  test_model_wrapper.py  test_nets.py  test_node_ops.py  test_ui.py  wrapper_node_test.py
(+41 files in other folders)
