[metadata]
name = architectures
version = 0.1.0
author = Jeff Rhoades, Larissa Heinrich
author_email = rhoadesj@hhmi.org, heinrichl@janelia.hhmi.org
url = https://github.com/janelia-cellmap/architectures
description = A collection of existing and custom built models for use with DaCapo and other ML training pipelines.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = image-segmentation, convolutional-neural-networks, deep-learning, pytorch
license = MIT License
classifiers =
    Programming Language :: Python :: 3


[options]
package_dir=
    =src
packages=find:
zip_safe = True
include_package_data = True
install_requires =
    torch
    numpy
    funlib.learn.torch @ git+https://github.com/funkelab/funlib.learn.torch.git

[options.packages.find]
where=src

