[metadata]
name = LeibNetz
version = 0.2.0
author = Jeff Rhoades, Larissa Heinrich
author_email = rhoadesj@hhmi.org, heinrichl@janelia.hhmi.org
url = https://github.com/janelia-cellmap/LeibNetz
description = A lightweight and modular library for rapidly developing and constructing PyTorch models deep learning.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = image-segmentation, convolutional-neural-networks, deep-learning, pytorch
license = MIT License
classifiers =
    Programming Language :: Python :: 3


[options]
package_dir=
    =leibnetz
packages=find:
zip_safe = True
include_package_data = True
install_requires =
    torch
    numpy
    funlib.learn.torch @ git+https://github.com/funkelab/funlib.learn.torch.git

[options.packages.find]
where=leibnetz

